rss and paginator

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="A layout example that shows off a blog page with a list of posts.">
 
-    <title>{% block title %} Andrew Liu Blog {% endblock %}</title>
+    <title>{% block title %} Shaune Wang Blog {% endblock %}</title>
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/grids-responsive-min.css">
     <link rel="stylesheet" href="http://picturebag.qiniudn.com/blog.css">
@@ -27,10 +27,10 @@
                         <a class="button-success pure-button" href="{% url "archives"%}">Archive</a>
                     </li>
                     <li class="nav-item">
-                        <a class="pure-button" href="https://github.com/Andrew-liu/my_blog_tutorial">Github</a>
+                        <a class="pure-button" href="https://github.com/wodear/my_blog_django">Github</a>
                     </li>
                     <li class="nav-item">
-                        <a class="button-error pure-button" href="http://weibo.com/dinosaurliu">Weibo</a>
+                        <a class="button-error pure-button" href="http://weibo.com/wangxw101">Weibo</a>
                     </li>
                     <li class="nav-item">
                         <a class="button-success pure-button" href="/">Pages</a>
@@ -61,7 +61,7 @@
                     <ul>
                         <li><a href="http://andrewliu.tk/about/">About Me</a></li>
                         <li><a href="http://twitter.com/yuilibrary/">Twitter</a></li>
-                        <li><a href="http://github.com/yahoo/pure/">GitHub</a></li>
+                        <li><a href="http://github.com/wodear">GitHub</a></li>
                     </ul>
                 </div>
             </div>
