--- a/templates/base.html
+++ b/templates/base.html
@@ -59,8 +59,8 @@
             <div class="footer">
                 <div class="pure-menu pure-menu-horizontal pure-menu-open">
                     <ul>
-                        <li><a href="http://andrewliu.tk/about/">About Me</a></li>
-                        <li><a href="http://twitter.com/yuilibrary/">Twitter</a></li>
+                        <li><a href="http://weibo.com/wangxw101">About Me</a></li>
+                        <li><a href="http://twitter.com/wodear/">Twitter</a></li>
                         <li><a href="http://github.com/wodear">GitHub</a></li>
                     </ul>
                 </div>
